fix: dropdown and scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,15 @@
 @import "tailwindcss";
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #2d3748;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #4a5568; 
+  border-radius: 6px;
+  border: 2px solid #2d3748;
+}
